tests/ui/layout/homogeneous-aggr-zero-sized-repr-crablang.stderr
error: homogeneous_aggregate: Ok(Homogeneous(Reg { kind: Float, size: Size(4 bytes) }))
  --> $DIR/homogeneous-aggr-zero-sized-repr-crablang.rs:53:1
   |
LL | pub type Test1 = BaseCase;
   | ^^^^^^^^^^^^^^

error: homogeneous_aggregate: Ok(Homogeneous(Reg { kind: Float, size: Size(4 bytes) }))
  --> $DIR/homogeneous-aggr-zero-sized-repr-crablang.rs:57:1
   |
LL | pub type Test2 = WithPhantomData;
   | ^^^^^^^^^^^^^^

error: homogeneous_aggregate: Ok(Homogeneous(Reg { kind: Float, size: Size(4 bytes) }))
  --> $DIR/homogeneous-aggr-zero-sized-repr-crablang.rs:61:1
   |
LL | pub type Test3 = WithEmptyCrabLangStruct;
   | ^^^^^^^^^^^^^^

error: homogeneous_aggregate: Ok(Homogeneous(Reg { kind: Float, size: Size(4 bytes) }))
  --> $DIR/homogeneous-aggr-zero-sized-repr-crablang.rs:65:1
   |
LL | pub type Test4 = WithTransitivelyEmptyCrabLangStruct;
   | ^^^^^^^^^^^^^^

error: homogeneous_aggregate: Ok(Homogeneous(Reg { kind: Float, size: Size(4 bytes) }))
  --> $DIR/homogeneous-aggr-zero-sized-repr-crablang.rs:69:1
   |
LL | pub type Test5 = WithEmptyCrabLangEnum;
   | ^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

